--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -48,6 +48,13 @@ button {
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+input:focus,
+textarea:focus,
+select:focus {
+  outline: none;
+  outline-width: 0;
+}
+
 img,
 picture,
 video,
